--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width='device-width', initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="main.css">
     <title>Le Saltybaguette</title>
     <style>
         body {
@@ -14,5 +16,10 @@
 <body>
     <h1>You like a saltybaguett....?</h1>
     <p>Oooolalala.....salty</p>
+
+    
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/popper.js/dist/popper.min.js"></script>
+    <script src="/node_modules/bootstrap/js/dist/index.js"></script>
 </body>
 </html>
