--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
     <title>Le Saltybaguette</title>
 </head>
 <body>
+    <header>
+
+    </header>
+    <nav class="navbar navbar-dark">
+        <ul class="navbar-nav">
+           <li class="nav-item"><a class="nav-link" href="#">Hello</a></li> 
+           <li class="nav-item"><a class="nav-link" href="#">World</a></li> 
+
+        </ul>
+    </nav>
+    <main>
     <h1>You like a saltybaguett....?</h1>
     <p>Oooolalala.....salty</p>
+    </main>
+    <footer>
 
-    
+    </footer>
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/popper.js/dist/popper.min.js"></script>
     <script src="/node_modules/bootstrap/js/dist/index.js"></script>
